@@ -277,6 +277,11 @@ C<add_column> method of L<DBIx::Class::ResultSource>.
 
 =for readme continue
 
+=head1 ROADMAP
+
+Support for Perl versions earlier than 5.10 will be removed sometime
+in 2019.
+
 =head1 SEE ALSO
 
 L<Type::Tiny>.
